rename following->followee
